
GENERIC_CODE =  $(CMND_SOURCES) $(DFT_SOURCES)

bin_PROGRAMS = dafty
#noinst_PROGRAMS = optest
#optest_SOURCES = optest.cpp $(GENERIC_CODE)

#BUILT_SOURCES = patchlevel.h

#patchlevel.h: update_patchlevel.sh @DARCS_INVENTORY@ $(DFT_SOURCES) $(CMND_SOURCES)
#	sh update_patchlevel.sh

dafty_SOURCES = dafty.cpp

#EXTRA_DIST = $(CMND_TEX) update_patchlevel.sh preproc.pl
